# Video-Synthesiser

./: .gitignore  CMakeLists.txt  ImageGenerator.cpp  ImageGenerator.h  QTimer data.xlsx  SonicPiAmplitudeExample.cpp  SonicPiAmplitudeExample.h  VideoSynth  VideoSynth.pro  VideoSynth_automoc.cpp  World.cpp  World.h  boostreader.cpp  boostreader.h  boostwriter.cpp  boostwriter.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  moc_timertester.cpp  qqueuetest.cpp  qqueuetest.h  qreader.cpp  qreader.h  qwriter.cpp  qwriter.h  test.h  timertester.cpp  timertester.h
Evaluation/: FinalEvaluator.h  L2Eval.h  UnitEvaluator.cpp  UnitEvaluator.h
Graph/: Graph.cpp  Graph.h
Synthesiser/: Synth.cpp  Synth.h  Unit.cpp  Unit.h
Synthesiser/SampleSynths/: Amplitude.cpp  Amplitude.h  FadingCopier.cpp  FadingCopier.h  FadingSquares.cpp  FadingSquares.h  Kaleidoscope.cpp  Kaleidoscope.h  MovingSquare.cpp  MovingSquare.h
Synthesiser/Units/: FloatUnits.cpp  FloatUnits.h  ImageUnits.cpp  ImageUnits.h  UnitMacros.h  Units.h
UserGraphics/: UserGraphics.h
World/: ImagePool.cpp  ImagePool.h  World.cpp  World.h
